# dearimgui-glfw-glad-cmake

./: .clang-tidy  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
cmake/dependencies/: dearimgui_dependency.cmake  glfw_dependency.cmake
src/: main.cpp  render_example.cpp
src/imgui_runner/: imgui_runner.cpp  imgui_runner.h
